--- a/README.html
+++ b/README.html
@@ -2605,7 +2605,7 @@
                                     alt="badge"></a></span>
                         <span class="image"><a class="image"
                                 href="https://dl.circleci.com/status-badge/redirect/gh/AndrewPoppe/Security-Access-Groups/tree/main"><img
-                                    src="https://dl.circleci.com/status-badge/img/gh/AndrewPoppe/Security-Access-Groups/tree/main.svg?style=svg"
+                                    src="https://dl.circleci.com/status-badge/img/gh/AndrewPoppe/Security-Access-Groups/tree/main.svg?style=shield"
                                     alt="CircleCI"></a></span>
                     </p>
                 </div>
@@ -5034,7 +5034,7 @@
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2023-09-04 18:07:29 -0400
+            Last updated 2023-09-04 20:30:05 -0400
         </div>
     </div>
 </body>
