Update Table of Contents

--- a/README.html
+++ b/README.html
@@ -2478,14 +2478,26 @@
                 </li>
                 <li><a href="#_control_center_page">Control Center Page</a>
                     <ul class="sectlevel2">
-                        <li><a href="#users_tab">Users Tab</a></li>
-                        <li><a href="#security_access_groups_tab">Security Access Groups Tab</a></li>
+                        <li><a href="#users_tab">Users Tab</a>
+                            <ul class="sectlevel3">
+                                <li><a href="#import_file_format">Import File Format</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#security_access_groups_tab">Security Access Groups Tab</a>
+                            <ul class="sectlevel3">
+                                <li><a href="#sag_import_file_format">SAG Import File Format</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#reports_tab">Reports Tab</a></li>
                     </ul>
                 </li>
                 <li><a href="#project_page">Project Page</a>
                     <ul class="sectlevel2">
-                        <li><a href="#project_status_tab">Project Status Tab</a></li>
+                        <li><a href="#project_status_tab">Project Status Tab</a>
+                            <ul class="sectlevel3">
+                                <li><a href="#placeholders">Placeholders</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#alert_log_tab">Alert Log Tab</a></li>
                         <li><a href="#logging">Logging</a></li>
                     </ul>
@@ -2494,13 +2506,31 @@
                     <ul class="sectlevel2">
                         <li><a href="#_general_information">General Information</a></li>
                         <li><a href="#_available_translations">Available Translations</a></li>
-                        <li><a href="#_limitations">Limitations</a></li>
-                        <li><a href="#_translating_the_module">Translating the Module</a></li>
+                        <li><a href="#_limitations">Limitations</a>
+                            <ul class="sectlevel3">
+                                <li><a href="#_right_to_left_languages">Right-to-Left Languages</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#_translating_the_module">Translating the Module</a>
+                            <ul class="sectlevel3">
+                                <li><a href="#_creating_a_new_translation">Creating a new translation</a></li>
+                                <li><a href="#_correcting_an_existing_translation">Correcting an existing
+                                        translation</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="#miscellaneous">Miscellaneous</a>
                     <ul class="sectlevel2">
-                        <li><a href="#searching">Searching</a></li>
+                        <li><a href="#searching">Searching</a>
+                            <ul class="sectlevel3">
+                                <li><a href="#_general">General</a></li>
+                                <li><a href="#_and_searches">"AND" Searches</a></li>
+                                <li><a href="#_or_searches">"OR" Searches</a></li>
+                                <li><a href="#_exact_phrase_searches">Exact Phrase Searches</a></li>
+                                <li><a href="#regular_expression_searches">Regular Expression Searches</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="#_php_and_redcap_version_support">PHP and REDCap Version Support</a></li>
@@ -5034,7 +5064,7 @@
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2023-09-04 20:30:05 -0400
+            Last updated 2023-09-04 20:52:24 -0400
         </div>
     </div>
 </body>
