Update README files

--- a/README.html
+++ b/README.html
@@ -2241,6 +2241,20 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </thead>
 <tbody>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">1.0.2</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">2023-10-06</p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
+<ul>
+<li>
+<p><strong>Major Bug Fix</strong>: Fixed a bug in which the module failed to prevent a user from being added to a user role under certain conditions (Bug <a href="https://github.com/AndrewPoppe/Security-Access-Groups/issues/51">#51</a>).</p>
+</li>
+<li>
+<p><strong>Medium Bug Fix</strong>: Fixed a bug in which the module failed to log role information completely under certain conditions (Bug <a href="https://github.com/AndrewPoppe/Security-Access-Groups/issues/50">#50</a>).</p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">1.0.1</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2023-09-21</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
@@ -2278,7 +2292,7 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-09-21 12:17:58 -0400
+Last updated 2023-10-06 15:39:01 -0400
 </div>
 </div>
 </body>
