Update form-control class to form-select class in email select dropdowns (due to BS5)

--- a/html/userEmailModal.html
+++ b/html/userEmailModal.html
@@ -20,7 +20,7 @@
                                             class="form-control form-control-sm" placeholder="{{status_ui_78}}">
                                     </div>
                                     <div class="col-sm-5 pl-0">
-                                        <select id="fromEmail" name="fromEmail" class="form-control form-control-sm">
+                                        <select id="fromEmail" name="fromEmail" class="form-select form-select-sm">
                                             {{EMAIL_OPTIONS}}
                                         </select>
                                     </div>
