--- a/html/userExpirationModal.html
+++ b/html/userExpirationModal.html
@@ -76,7 +76,7 @@
                                         </div>
                                         <div class="col-sm-5 pl-0">
                                             <select id="fromEmail-userExpiration" name="fromEmail"
-                                                class="form-control form-control-sm">
+                                                class="form-select form-select-sm">
                                                 {{EMAIL_OPTIONS}}
                                             </select>
                                         </div>
@@ -160,7 +160,7 @@
                                         <div class="col-sm-5 pl-0">
                                             <select id="fromEmail-userExpiration-UserRightsHolders"
                                                 name="fromEmail-userExpiration-UserRightsHolders"
-                                                class="form-control form-control-sm">
+                                                class="form-select form-select-sm">
                                                 {{EMAIL_OPTIONS}}
                                             </select>
                                         </div>
