--- a/html/userRightsHoldersEmailModal.html
+++ b/html/userRightsHoldersEmailModal.html
@@ -24,7 +24,7 @@
                                             </div>
                                             <div class="col-sm-5 pl-0">
                                                 <select id="fromEmail-UserRightsHolders" name="fromEmail"
-                                                    class="form-control form-control-sm">
+                                                    class="form-select form-select-sm">
                                                     {{EMAIL_OPTIONS}}
                                                 </select>
                                             </div>
