--- a/README.html
+++ b/README.html
@@ -2193,10 +2193,11 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 <div class="sectionbody">
 <table class="tableblock frame-all grid-all stripes-even stretch">
 <colgroup>
-<col style="width: 25%;">
-<col style="width: 25%;">
-<col style="width: 25%;">
-<col style="width: 25%;">
+<col style="width: 20%;">
+<col style="width: 20%;">
+<col style="width: 20%;">
+<col style="width: 20%;">
+<col style="width: 20%;">
 </colgroup>
 <thead>
 <tr>
@@ -2204,20 +2205,23 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 <th class="tableblock halign-left valign-top">REDCap v13.7.23</th>
 <th class="tableblock halign-left valign-top">REDCap v13.9.3</th>
 <th class="tableblock halign-left valign-top">REDCap v13.10.0</th>
+<th class="tableblock halign-left valign-top">REDCap v13.11.4</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<th class="tableblock halign-left valign-top"><p class="tableblock">REDCap v13.11.4</p></th>
-<td class="tableblock halign-left valign-top"><p class="tableblock">PHP v7.4.5</p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">PHP v7.4.5</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.7.23.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.7.23.yml/badge.svg" alt="badge"></a></span></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.9.3.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.9.3.yml/badge.svg" alt="badge"></a></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.10.0.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.10.0.yml/badge.svg" alt="badge"></a></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.11.4.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.11.4.yml/badge.svg" alt="badge"></a></span></p></td>
 </tr>
 <tr>
-<th class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.10.0.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.10.0.yml/badge.svg" alt="badge"></a></span></p></th>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.11.4.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP7.4.5_REDCap13.11.4.yml/badge.svg" alt="badge"></a></span></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">PHP v8.2</p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">PHP v8.2</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.7.23.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.7.23.yml/badge.svg" alt="badge"></a></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.9.3.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.9.3.yml/badge.svg" alt="badge"></a></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.10.0.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.10.0.yml/badge.svg" alt="badge"></a></span></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><span class="image"><a class="image" href="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.11.4.yml"><img src="https://github.com/AndrewPoppe/Security-Access-Groups/actions/workflows/playwright_PHP8.2_REDCap13.11.4.yml/badge.svg" alt="badge"></a></span></p></td>
 </tr>
 </tbody>
 </table>
@@ -2326,7 +2330,7 @@ including the '|' symbol has the side effect of making the search a Regular Expr
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-11-29 10:13:24 -0500
+Last updated 2023-11-29 10:16:19 -0500
 </div>
 </div>
 </body>
