Fix typo in invalid feedback message in user alert

--- a/html/userEmailModal.html
+++ b/html/userEmailModal.html
@@ -40,7 +40,7 @@
                                             class="col-form-label col-form-label-sm">{{status_ui_81}}</label>
                                         <textarea id="emailBody" name="emailBody" type="text"
                                             class="form-control form-control-sm richtext emailBody"></textarea>
-                                        <div class="invalid-feedback">{{status_us_82}}</div>
+                                        <div class="invalid-feedback">{{status_ui_82}}</div>
                                     </div>
                                 </div>
                                 <div class="form-group row mb-1">
